# alchemy-engine

./: .credo.exs  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  ci_output.txt  development.md  mix.exs  temp_launcher_orig.rs
native/: Cargo.toml
native/.cargo/: config.toml
native/app/: Cargo.toml  README.md
native/app/src/: ios.rs  main.rs
native/audio/: README.md
native/audio/src/: audio.rs  lib.rs
native/audio/src/asset/: mod.rs
native/audio/src/platform/: desktop.rs  mod.rs
native/client/: Cargo.toml
native/client/src/: info.rs  lib.rs  zenoh.rs
native/client_android/: Cargo.toml
native/client_android/src/: main.rs
native/client_desktop/: Cargo.toml
native/client_desktop/src/: main.rs  msgpack_decode.rs  network_render_bridge.rs
native/client_ios/: Cargo.toml
native/client_ios/src/: main.rs
native/client_web/: Cargo.toml
native/client_web/src/: lib.rs
native/desktop_client/: Cargo.toml
native/desktop_client/src/: main.rs  msgpack_decode.rs  network_render_bridge.rs
native/desktop_input/: Cargo.toml
native/desktop_input/src/: desktop_loop.rs  lib.rs
native/desktop_input_openxr/: Cargo.toml
native/desktop_input_openxr/src/: lib.rs
native/desktop_render/: Cargo.toml
native/desktop_render/src/: headless.rs  lib.rs  window.rs
native/desktop_render/src/renderer/: mod.rs  pipeline_3d.rs  ui.rs
native/game_audio/: Cargo.toml
native/game_audio/src/: audio.rs
native/game_audio/src/asset/: mod.rs
native/game_input/: Cargo.toml
native/game_input/src/: desktop_loop.rs  lib.rs
native/game_input_openxr/: Cargo.toml
native/game_input_openxr/src/: lib.rs
native/game_native/: Cargo.toml
native/game_native/src/: lib.rs  render_bridge.rs  render_snapshot.rs
native/game_native/src/game_logic/: events.rs  physics_step.rs
native/game_native/src/nif/: action_nif.rs  game_loop_nif.rs  read_nif.rs  render_nif.rs  save_nif.rs  world_nif.rs
native/game_native/src/world/: frame_event.rs  game_world.rs
native/game_nif/: Cargo.toml
native/game_nif/src/: key_map.rs  lib.rs  render_bridge.rs  render_frame_buffer.rs  render_snapshot.rs  xr_bridge.rs
native/game_nif/src/nif/: action_nif.rs  events.rs  game_loop_nif.rs  load.rs  mod.rs  push_tick_nif.rs  read_nif.rs  render_frame_nif.rs  render_nif.rs  save_nif.rs  util.rs  world_nif.rs  xr_nif.rs
native/game_physics/: Cargo.toml
native/game_physics/benches/: chase_ai_bench.rs
native/game_physics/src/: boss.rs  constants.rs  enemy.rs  entity_params.rs  item.rs  lib.rs  util.rs  weapon.rs
native/game_physics/src/game_logic/: chase_ai.rs  mod.rs  physics_step.rs
native/game_physics/src/physics/: separation.rs  spatial_hash.rs
native/game_physics/src/world/: boss.rs  bullet.rs  enemy.rs  frame_event.rs  game_loop_control.rs  game_world.rs  mod.rs  particle.rs  player.rs
native/game_render/: Cargo.toml
native/game_render/src/: headless.rs  lib.rs  window.rs
native/game_render/src/renderer/: mod.rs  pipeline_3d.rs  ui.rs
native/game_simulation/: Cargo.toml
native/game_simulation/benches/: chase_ai_bench.rs
native/game_simulation/src/: boss.rs  enemy.rs  entity_params.rs  lib.rs  weapon.rs
native/game_simulation/src/game_logic/: chase_ai.rs  mod.rs  physics_step.rs
native/game_simulation/src/physics/: obstacle_resolve.rs  spatial_hash.rs
native/game_simulation/src/world/: boss.rs  bullet.rs  enemy.rs  frame_event.rs  game_loop_control.rs  game_world.rs  mod.rs  particle.rs  player.rs
native/input/: Cargo.toml
native/input/src/: desktop_loop.rs  lib.rs
native/input_openxr/: Cargo.toml
native/input_openxr/src/: lib.rs
native/launcher/: Cargo.toml
native/launcher/src/: main.rs
native/network/: Cargo.toml  build.rs
native/network/src/: bert_decode.rs  bert_encode.rs  common.rs  lib.rs  msgpack_decode.rs  network_render_bridge.rs  protobuf_codec.rs  protobuf_render_frame.rs
native/network/src/platform/: desktop.rs  web.rs
native/network/tests/: render_frame_e2e_contract.rs
native/nif/: Cargo.toml  README.md  build.rs
native/nif/src/: key_map.rs  lib.rs  lock_metrics.rs  render_bridge.rs  render_frame_buffer.rs  xr_bridge.rs
native/nif/src/formula/: decode.rs  mod.rs  opcode.rs  value.rs  vm.rs
native/nif/src/nif/: action_nif.rs  events.rs  formula_nif.rs  game_loop_nif.rs  load.rs  mod.rs  protobuf_frame_injection.rs  push_tick_nif.rs  read_nif.rs  render_frame_nif.rs  render_nif.rs  save_nif.rs  util.rs  world_nif.rs  xr_nif.rs
native/nif/src/physics/: boss.rs  constants.rs  entity_params.rs  mod.rs  util.rs  weapon.rs
native/physics/: Cargo.toml
native/physics/benches/: chase_ai_bench.rs
native/physics/src/: constants.rs  enemy.rs  entity_params.rs  item.rs  lib.rs  util.rs  weapon.rs
native/physics/src/game_logic/: chase_ai.rs  mod.rs  physics_step.rs
native/physics/src/physics/: obstacle_resolve.rs  rng.rs  separation.rs  spatial_hash.rs
native/physics/src/world/: boss.rs  bullet.rs  enemy.rs  frame_event.rs  game_world.rs  mod.rs  player.rs  special_entity.rs
native/render/: Cargo.toml  README.md
native/render/src/: common.rs  headless.rs  lib.rs  window.rs
native/render/src/renderer/: mod.rs  ui.rs  (+1 more)
native/render_frame_proto/: Cargo.toml  build.rs
native/render_frame_proto/src/: lib.rs
native/render_frame_proto/tests/: decode_contract.rs
native/shared/: Cargo.toml  README.md
native/shared/src/: display.rs  engine_color.rs  lib.rs  render_frame.rs  types.rs
native/tools/launcher/: acknowledgements.txt
native/window/: Cargo.toml  README.md
native/window/src/: desktop_loop.rs  lib.rs
native/xr/src/: lib.rs
rust/: Cargo.toml
rust/client/app/: Cargo.toml
rust/client/audio/: Cargo.toml
rust/client/auth_client/: Cargo.toml
rust/client/network/: Cargo.toml  README.md  build.rs
rust/client/render/: README.md
rust/client/render_frame_proto/: build.rs
rust/client/system_ui/: Cargo.toml
rust/client/window/: Cargo.toml
rust/client/xr/: Cargo.toml  README.md
rust/launcher/: Cargo.toml  README.md
rust/launcher/src/: main.rs
rust/nif/: README.md
rust/nif/src/: lib.rs
(+889 files in other folders)
