[workspace]
resolver = "2"
members = [
    "shared",
    "network",
    "client",
    "physics",
    "audio",
    "desktop_render",
    "nif",
    "desktop_input",
    "desktop_input_openxr",
    "client_desktop",
    "client_web",
    "client_android",
    "client_ios",
    "launcher",
]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
