[workspace]
resolver = "2"
members = [
    "shared",
    "network",
    "client",
    "physics",
    "audio",
    "render",
    "nif",
    "window",
    "xr",
    "client_desktop",
    "client_web",
    "client_android",
    "client_ios",
    "launcher",
]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
