[package]
name = "client_desktop"
version = "0.1.0"
edition = "2021"
description = "デスクトップ（Windows/Linux/macOS）用クライアント（Zenoh 経由でサーバーに接続）"

[[bin]]
name = "client_desktop"
path = "src/main.rs"

[dependencies]
client = { path = "../client" }
desktop_render = { path = "../desktop_render" }
desktop_input = { path = "../desktop_input" }
physics = { path = "../physics" }
audio = { path = "../audio" }
zenoh = "1.7"
futures = "0.3"
futures-timer = "3.0"
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
