[package]
name = "client_desktop"
version = "0.1.0"
edition = "2021"
description = "デスクトップ（Windows/Linux/macOS）用クライアント（Zenoh 経由でサーバーに接続）"

[[bin]]
name = "client_desktop"
path = "src/main.rs"

[dependencies]
client = { path = "../client" }
network = { path = "../network" }
desktop_render = { path = "../desktop_render" }
desktop_input = { path = "../desktop_input" }
physics = { path = "../physics" }
audio = { path = "../audio" }
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
