[package]
name = "game_native"
version = "0.1.0"
edition = "2021"

[features]
# umbrella 構成では GameEngine.NifBridge として NIF を登録する
default = ["umbrella"]
umbrella = []

[lib]
name = "game_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
game_core = { path = "../game_core" }
game_render = { path = "../game_render" }
game_window = { path = "../game_window" }
rustler = "0.34"
rayon = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
rodio = { version = "0.21", default-features = false, features = ["playback", "wav", "vorbis"] }

