[package]
name = "game_physics"
version = "0.1.0"
edition = "2021"
description = "ECS World・物理演算（衝突・分離・空間ハッシュ・Chase AI）（ヘッドレス動作可能）"

[dependencies]
rustc-hash = "2"
rayon = "1"
log = "0.4"

[dependencies.rustler]
version = "0.34"
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "chase_ai_bench"
harness = false

[features]
nif = ["rustler"]
