[package]
name = "network"
version = "0.1.0"
edition = "2021"
description = "Zenoh による高速トランスポート（The Pipe）"

[dependencies]
render = { path = "../render" }
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
shared = { path = "../shared" }
zenoh = "1.7"
futures = "0.3"
futures-timer = "3.0"
log = "0.4"
