[package]
name = "nif"
version = "0.1.0"
edition = "2021"
description = "Elixir <-> Rust NIF通信インターフェース（Rustler）"

[features]
default = ["umbrella"]
umbrella = []
xr = ["desktop_input_openxr", "desktop_input_openxr/openxr"]

[lib]
name = "nif"
crate-type = ["cdylib", "rlib"]

[dependencies]
physics = { path = "../physics", features = ["nif"] }
audio      = { path = "../audio" }
desktop_input_openxr = { path = "../desktop_input_openxr", optional = true }
rustler = "0.37"
rayon = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
rmp-serde = "1.3"
