[package]
name = "nif"
version = "0.1.0"
edition = "2021"
description = "Elixir <-> Rust NIF通信インターフェース（Rustler）"

[features]
default = ["umbrella"]
umbrella = []

[lib]
name = "nif"
crate-type = ["cdylib", "rlib"]

[dependencies]
audio = { path = "../audio" }
rustc-hash = "2"
rustler = "0.37"
rayon = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
rmp-serde = "1.3"
