[package]
name = "nif"
version = "0.1.0"
edition = "2021"
description = "Rustler NIF — Formula VM（run_formula_bytecode）のみ。ゲーム ECS/物理は撤去済み（フェーズ 4）。"

[features]
default = ["umbrella"]
umbrella = []

[lib]
name = "nif"
crate-type = ["cdylib", "rlib"]

[dependencies]
rustler = "0.37"
log = "0.4"
env_logger = "0.11"
