[package]
name = "launcher"
version = "0.1.0"
edition = "2021"
description = "AlchemyEngine システムトレイランチャー"

[[bin]]
name = "launcher"
path = "src/main.rs"

[dependencies]
kill_tree = "0.2"
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
semver = "1.0"
serde_json = "1.0"
tao = "0.34"
tray-icon = "0.21"
