[package]
name = "auth_client"
version = "0.1.0"
edition = "2021"
description = "alchemy-auth API クライアント（reqwest + rustls）"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
