[package]
name = "auth_client"
version = "0.1.0"
edition = "2021"
description = "alchemy-auth API クライアント（reqwest + rustls）"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
# OS 資格情報ストア（Windows Credential Manager / macOS Keychain / Secret Service）
keyring = { version = "3", features = [
    "windows-native",
    "apple-native",
    "sync-secret-service",
] }
