[package]
name = "network"
version = "0.1.0"
edition = "2021"
description = "Zenoh による高速トランスポート（The Pipe）"

[dependencies]
render = { path = "../render" }
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
shared = { path = "../shared" }
zenoh = "1.7"
futures = "0.3"
futures-timer = "3.0"
log = "0.4"
prost = "0.14"

[build-dependencies]
prost-build = "0.14"
